2010-10-03 [michael]	3.4.0cvs14

	* libclamd/clamd-plugin.c
	    Hardening stream scanning
	    Simplyfied error handling

2010-10-03 [michael]	3.4.0cvs13

	* libclamd/clamd-plugin.c
	    Fix some more potential SIGSEV
	    Add missing i18n strings

2010-10-03 [michael]	3.4.0cvs12

	* libclamd/clamd-plugin.c
	    Fix SIGSEV when scan error in clamd_stream_scan

2010-10-03 [michael]	3.4.0cvs11

	* libclamd/clamd-plugin.c
	    Fix broken automatic configuration.
	    Now properly handle automatic configuration
	    if the clamav-daemon if configured to use
	    a TCP socket.
	    This also means that using a remote clamav-
	    daemon can also be configured automatically
	    if a clamd.conf is found and the file has
	    TCPSocket NUMBER and TCPAddr HOST/IP. See
	    man clamd.conf.

2010-10-03 [michael]	3.4.0cvs10

	* src/clamav_plugin.c
	    Added info about using a TCP socket
	    to communicate with clamav-daemon
	    to avoid changing permissions on
	    folders in the users home folder.

2010-09-29 [michael]	3.4.0cvs9

	* configure.ac
	* src/clamav_plugin_gtk.c
	    - Forgot to add AC_SYS_LARGEFILE to configure.ac
	    - Fixed a bug which prevented proper initialization
	      of configuration type

2010-09-29 [michael]	3.4.0cvs8

	* libclamd/clamd-plugin.c
	* libclamd/clamd-plugin.h
	    - Added support for scan an stream of data
	      using the command INSTREAM. INSTREAM is
	      the only way to have a file scanned on
	      a remote host.

2010-09-28 [michael]	3.4.0cvs7

	* libclamd/clamd-plugin.c
	* libclamd/clamd-plugin.h
	* src/clamav_plugin.c
	* src/clamav_plugin.h
	* src/clamav_plugin_gtk.c
	    - Make configuration user configurable
	    - Fix a bug which could cause an endless loop

2010-09-27 [michael]	3.4.0cvs6

	* Makefile.in
	    - Missing file


2010-09-27 [michael]	3.4.0cvs5

	* COPYING
	* src/clamav_plugin.c
	* src/clamav_plugin.h
	* src/clamav_plugin_gtk.c
	    - Changed license from GPLv2+ to GPLv3+